--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         java-version: 1.8
         
     - name: Build project with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean install
       
     - name: run folder
       run: |
