--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 	
 	 <resources>
 	<resource>
-	<directory>src/main/resources</directory>
+	<directory>src/test/java/testpackage</directory>
 	<filtering>true</filtering>
 	</resource>
 	</resources> 
