--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,8 @@
 <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-source-plugin</artifactId>
+    <version>3.8.1</version>
+
    		<executions>
 			<execution>
 				<id>attach-sources</id>
@@ -83,7 +85,7 @@
 	
 	 <resources>
 	<resource>
-	<directory>src/test/java/testpackage</directory>
+	<directory>src/main/resources</directory>
 	<filtering>true</filtering>
 	</resource>
 	</resources> 
