--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,9 @@ jobs:
         java-version: 1.8
         
     - name: Build project with Maven
-      run: mvn clean install
+      run: |
+        cd Heritage
+        mvn clean install
       
     
 
