--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,14 @@ jobs:
       with:
         java-version: 1.8
         
-    - name: Build project with Maven
+    - name: run
       run: |
-        cd Heritage
-        mvn clean install
+          echo port = ${{ env.port }}
+        
+#     - name: Build project with Maven
+#       run: |
+#         cd Heritage
+#         mvn clean install
       
     
 
