--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         
     - name: run
       run: |
-          echo port = ${{ env.port }}
+          echo "port = ${{env.port}}"
         
 #     - name: Build project with Maven
 #       run: |
