--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,15 @@ jobs:
   build_and_test:
 
     runs-on: ubuntu-latest
-
+   
+    
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-        
+        env_file: ./.env
     - name: run
       run: |
           echo "port = ${{env.port}}"
