--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-        env: dotenv
+        env: ./.env
     - name: run
       run: |
            port: ${{ env.PORT }}
