--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         env: ./.env
     - name: run
       run: |
-           port: ${{ env.PORT }}
+           echo my name is  ${{ env.PORT }}
         
 #     - name: Build project with Maven
 #       run: |
